third_party/move/move-compiler/tests/move_check/typing/number_literal_too_large.exp
error[E04021]: invalid number after type inference
  ┌─ tests/move_check/typing/number_literal_too_large.move:3:9
  │
3 │         340282366920938463463374607431768211455;
  │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  │         │
  │         Invalid numerical literal
  │         Annotating the literal might help inference: '340282366920938463463374607431768211455u128'
  │         Expected a literal of type 'u64', but the value is too large.

error[E04021]: invalid number after type inference
  ┌─ tests/move_check/typing/number_literal_too_large.move:5:10
  │
5 │         (340282366920938463463374607431768211454: u64);
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  --- Expected a literal of type 'u64', but the value is too large.
  │          │                                         
  │          Invalid numerical literal
  │          Annotating the literal might help inference: '340282366920938463463374607431768211454u128'

error[E04021]: invalid number after type inference
  ┌─ tests/move_check/typing/number_literal_too_large.move:6:10
  │
6 │         (340282366920938463463374607431768211454: u8);
  │          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^  -- Expected a literal of type 'u8', but the value is too large.
  │          │                                         
  │          Invalid numerical literal
  │          Annotating the literal might help inference: '340282366920938463463374607431768211454u128'

error[E04021]: invalid number after type inference
  ┌─ tests/move_check/typing/number_literal_too_large.move:8:10
  │
8 │         (18446744073709551616: u64);
  │          ^^^^^^^^^^^^^^^^^^^^  --- Expected a literal of type 'u64', but the value is too large.
  │          │                      
  │          Invalid numerical literal
  │          Annotating the literal might help inference: '18446744073709551616u128'

error[E04021]: invalid number after type inference
  ┌─ tests/move_check/typing/number_literal_too_large.move:9:10
  │
9 │         (18446744073709551616: u8);
  │          ^^^^^^^^^^^^^^^^^^^^  -- Expected a literal of type 'u8', but the value is too large.
  │          │                      
  │          Invalid numerical literal
  │          Annotating the literal might help inference: '18446744073709551616u128'

error[E04021]: invalid number after type inference
   ┌─ tests/move_check/typing/number_literal_too_large.move:11:10
   │
11 │         (18446744073709551615: u8);
   │          ^^^^^^^^^^^^^^^^^^^^  -- Expected a literal of type 'u8', but the value is too large.
   │          │                      
   │          Invalid numerical literal
   │          Annotating the literal might help inference: '18446744073709551615u64'

error[E04021]: invalid number after type inference
   ┌─ tests/move_check/typing/number_literal_too_large.move:13:10
   │
13 │         (256: u8);
   │          ^^^  -- Expected a literal of type 'u8', but the value is too large.
   │          │     
   │          Invalid numerical literal
   │          Annotating the literal might help inference: '256u16'

error[E04021]: invalid number after type inference
   ┌─ tests/move_check/typing/number_literal_too_large.move:19:10
   │
19 │         (3402534025: u16);
   │          ^^^^^^^^^^  --- Expected a literal of type 'u16', but the value is too large.
   │          │            
   │          Invalid numerical literal
   │          Annotating the literal might help inference: '3402534025u32'

error[E04021]: invalid number after type inference
   ┌─ tests/move_check/typing/number_literal_too_large.move:22:10
   │
22 │         (3402534025534025: u32);
   │          ^^^^^^^^^^^^^^^^  --- Expected a literal of type 'u32', but the value is too large.
   │          │                  
   │          Invalid numerical literal
   │          Annotating the literal might help inference: '3402534025534025u64'

error[E04021]: invalid number after type inference
   ┌─ tests/move_check/typing/number_literal_too_large.move:24:9
   │
24 │         340282366920938463463374607431768211455607431768211455;
   │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   │         │
   │         Invalid numerical literal
   │         Annotating the literal might help inference: '340282366920938463463374607431768211455607431768211455u256'
   │         Expected a literal of type 'u64', but the value is too large.

