third_party/move/move-compiler/tests/move_check/typing/number_literal_too_large.move
module 0x8675309::M {
    fun foo() {
        340282366920938463463374607431768211455;

        (340282366920938463463374607431768211454: u64);
        (340282366920938463463374607431768211454: u8);

        (18446744073709551616: u64);
        (18446744073709551616: u8);

        (18446744073709551615: u8);

        (256: u8);

        34025;
        (34025: u16);

        3402534025;
        (3402534025: u16);

        3402534025534025;
        (3402534025534025: u32);

        340282366920938463463374607431768211455607431768211455;
    }
}
